<resources>
    <string name="app_name">Экстраверт</string>

    <string name="description">Описание</string>
    <string name="end_of_time">Время вышло</string>
    <string name="result"> Названо слов: %1$d</string>
    <string name="finish_of_exercise">Упражнение закончено</string>
    <string name="number_words_for_session">Слов:</string>
    <string name="number_sentences_for_session">Предложений:</string>
    <string name="number_of_questions">Вопросов:</string>
    <string name="number_stores_for_session">Историй:</string>
    <string name="number_letters_for_session">Букв:</string>
    <string name="number_categories_for_session">Категорий:</string>
    <string name="number_images_for_session">Изображений:</string>
    <string name="number_abbreviations">Аббревиатур:</string>
    <string name="number_tongue_twisters">Скороговорок:</string>
    <string name="number_sound_combinations">Звукосочетаний:</string>
    <string name="average_time_on_sentence">В среднем потрачено на предложение</string>
    <string name="average_time_on_story">В среднем потрачено на рассказ</string>
    <string name="average_time_on_letter">В среднем потрачено на букву</string>
    <string name="average_time_on_image">В среднем потрачено на изображение</string>
    <string name="average_time_on_category">В среднем потрачено на категорию</string>
    <string name="average_time_on_abbreviation">В среднем потрачено на аббревиатуру</string>
    <string name="average_time_on_word">В среднем потрачено на слово</string>
    <string name="average_time_on_tongue_twister">В среднем потрачено на скороговорку</string>
    <string name="average_time_on_sound_combinations">В среднем потрачено на звукосочетание</string>
    <string name="told_subtitle">Названо</string>
    <string name="passed_subtitle">Пройденно</string>
    <string name="made_subtitle">Составленно</string>

    <string name="number_of_words_in_story">Количество слов в истории</string>
    <string name="seconds_short">сек</string>
    <string name="statistic">Статистика</string>
    <string name="start">НАЧАТЬ</string>
    <string name="start_training">начать тренировку</string>
    <string name="daily_training">Ежедневная тренировка</string>
    <string name="no_data">Нет данных</string>
    <string name="title_exercises">Упражнения</string>
    <string name="exercises">Упражнения</string>
    <string name="profile">Профиль</string>
    <string name="records">Записи</string>
    <string name="days_without_interruption">Дней подряд</string>
    <string name="time_on_training">Время (минуты) потраченное на тренировку</string>
    <string name="settings">Настройки</string>
    <string name="remove_ads">Убрать рекламу</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="orator_level">Уровень оратора</string>
    <string name="impromptu">Экспромт</string>
    <string name="diction">Дикция</string>
    <string name="completed_daily_trainings">Завершено ежедневных тренировок</string>
    <string name="summary_training_time">Суммарное тренировочное время (минуты)</string>
    <string name="completed_exercises">Завершено упражнений</string>
    <string name="click_on_screen">Нажимайте на экран, для учета результата</string>
    <string name="word_of_the_day">Слово дня</string>
    <string name="no_exercises_text_one">На сегодня все</string>
    <string name="no_exercises_text_two">новая тренировка будет доступна завтра</string>
    <string name="phrase_of_day">Фраза дня</string>
    <string name="chose_theme">Выбор темы</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="notifications">Уведомления</string>
    <string name="auto_recording">Начинать запись автоматически</string>
    <string name="keep_screen_on">Не выключать экран во время вполнения упражнений</string>
    <string name="clear_all_data">Очистить все данные</string>
    <string name="notifications_settings">Настройка уведомлений</string>
    <string name="notification_text">Текст уведомления</string>
    <string name="ok">Ok</string>
    <string name="good">Хорошо</string>
    <string name="empty_field_error">Это поле не может быть пустым</string>
    <string name="save">Сохранить</string>
    <string name="clear_read"><font fgcolor='#FFFF3B30'>Очистить</font></string>
    <string name="this_action_is_impossible_to_cancel">Это действие нельзя будет отменить</string>
    <string name="data_cleared">Данные успешно очищены</string>
    <string name="clear_all_data_confirmation_message">Вы уверены, что ходите очистить ваш прогресс? Будут удалены достижения, статистика по всем упражениям и записи голоса.</string>

    <string name="category_vocabulary">Для увеличения словарного запаса</string>
    <string name="category_diction_and_articulation">Для улучшения дикции и артикуляции</string>
    <string name="category_sense_of_humor">Для развития чувстава юмора</string>
    <string name="category_communications">Для развития навыков общения</string>
    <string name="category_all_exercise">Все упражнения</string>
    <string name="category_favorite">Избранные</string>
    <string name="add_to_favorite">В избранные</string>
    <string name="daily">Ежедневная</string>
    <string name="training">тренировка</string>
    <string name="all">Все</string>
    <string name="vocabulary">Словарный запас</string>
    <string name="sense_of_humor">Чувство юмора</string>
    <string name="communication">Навык общения</string>
    <string name="no_favorites">Избранных упражнений нет</string>
    <string name="permission_denied_error_title">Ошибка доступа</string>
    <string name="grant_permission">Дать разрешение</string>
    <string name="close">Закрыть</string>
    <string name="audio_permission_denied_message">Для работы функционала диктофона необходимо дать разрешение</string>
    <string name="record_saved">Запись успешно сохранена</string>
    <string name="cancel">Отмена</string>
    <string name="record_deleted">Запись удалена</string>
    <string name="achievement">Достижения</string>
    <string name="start_daily_training">начать ежедневную тренеровку</string>
    <string name="last_training_was">Предыдущая тренировка была</string>
    <string name="finished_trainings_in_row">Завершенных тренеровок подряд:</string>
    <string name="training_is_over">Тренировка закончена</string>
    <string name="training_is_over_info_text">Ежедневная тренировка выполнена! Следующая будет доступна завтра, отдыхайте</string>
    <string name="time_is_over">Время вышло</string>
    <string name="new_talksy_message">
Switch to the new Talksy app and boost your communication skills even more effectively!\n\nWe created Talksy to make learning communication modern, convenient, and truly effective.\nIn the new app, you’ll find a full course that guides you step by step to speak confidently in any situation.\n\n✅ Modern design — easy and pleasant to use.\n✅ More exercises and real-life scenarios — practice exactly the situations you’ll face in life.\n✅ Achievements and levels — track your progress and stay motivated to keep going.\n✅ Fast and stable performance — no lags or crashes.\n\nThis app will no longer be updated or supported.\n\nTo keep improving, switch to Talksy and unlock even more opportunities!
</string>
    <string name="talksy_welcome">Talksy is here! 🎉</string>
    <string name="go_to_talksy">Go to Talksy</string>

    <string-array name="empty_array" />
</resources>