<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_level_orator"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <yaroslavgorbach.koropapps.vocabulary.feature.common.uikit.customview.TextProgressView
            android:id="@+id/level"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            app:textProgress="50"
            app:textProgressColor="@color/gold"
            app:textProgressOutlineStrokeWidth="2dp"
            app:textProgressStrokeWidth="2dp"
            app:textProgressTextColor="@color/gold" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/orator_level"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_orator"
        app:layout_constraintStart_toStartOf="@+id/card_level_orator"
        app:layout_constraintTop_toBottomOf="@+id/card_level_orator" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_level_improvisation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toStartOf="@+id/card_level_diction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_level_diction">

        <yaroslavgorbach.koropapps.vocabulary.feature.common.uikit.customview.ImageProgressView
            android:id="@+id/level_improvisation_image_progress"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:imageProgress="50"
            app:imageProgressColor="@color/gold"
            app:imageProgressOutlineStrokeWidth="2dp"
            app:imageProgressStrokeWidth="2dp"
            app:textProgressTextColor="@color/gold" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/level_improvisation_progress_text"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_improvisation"
        app:layout_constraintStart_toStartOf="@+id/card_level_improvisation"
        app:layout_constraintTop_toBottomOf="@+id/card_level_improvisation" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/impromptu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_improvisation"
        app:layout_constraintStart_toStartOf="@+id/card_level_improvisation"
        app:layout_constraintTop_toBottomOf="@+id/level_improvisation_progress_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_level_diction"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toStartOf="@+id/card_level_vocabulary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_level_improvisation"
        app:layout_constraintTop_toTopOf="@+id/card_level_vocabulary">

        <yaroslavgorbach.koropapps.vocabulary.feature.common.uikit.customview.ImageProgressView
            android:id="@+id/level_diction_image_progress"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:imageProgress="50"
            app:imageProgressColor="@color/gold"
            app:imageProgressOutlineStrokeWidth="2dp"
            app:imageProgressStrokeWidth="2dp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/level_diction_progress_text"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_diction"
        app:layout_constraintStart_toStartOf="@+id/card_level_diction"
        app:layout_constraintTop_toBottomOf="@+id/card_level_diction" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/diction"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_diction"
        app:layout_constraintStart_toStartOf="@+id/card_level_diction"
        app:layout_constraintTop_toBottomOf="@+id/level_diction_progress_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_level_vocabulary"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_level_diction"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <yaroslavgorbach.koropapps.vocabulary.feature.common.uikit.customview.ImageProgressView
            android:id="@+id/level_vocabulary_image_progress"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:imageProgress="50"
            app:imageProgressColor="@color/gold"
            app:imageProgressOutlineStrokeWidth="2dp"
            app:imageProgressStrokeWidth="2dp" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/level_vocabulary_progress_text"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_vocabulary"
        app:layout_constraintStart_toStartOf="@+id/card_level_vocabulary"
        app:layout_constraintTop_toBottomOf="@+id/card_level_vocabulary" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/vocabulary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/card_level_vocabulary"
        app:layout_constraintStart_toStartOf="@+id/card_level_vocabulary"
        app:layout_constraintTop_toBottomOf="@+id/level_vocabulary_progress_text" />

</androidx.constraintlayout.widget.ConstraintLayout>